--- a/repository-released.json
+++ b/repository-released.json
@@ -71,12 +71,17 @@
     {
       "name": "OpenUri",
       "details": "https://github.com/jfcherng-sublime/ST-OpenUri",
+      "readme": "https://raw.githubusercontent.com/jfcherng-sublime/ST-OpenUri/st4/README.md",
       "author": ["jfcherng"],
       "labels": ["shortcut", "url", "uri", "browser"],
       "releases": [
         {
-          "sublime_text": ">=3118",
-          "tags": true
+          "sublime_text": ">=4105",
+          "tags": "4105-"
+        },
+        {
+          "sublime_text": "3118 - 4104",
+          "tags": "3118-"
         }
       ]
     },
