chore: update BootstrapAutocomplete
Signed-off-by: Jack Cherng <jfcherng@gmail.com>

--- a/repository-released.json
+++ b/repository-released.json
@@ -64,7 +64,7 @@
       "releases": [
         {
           "sublime_text": ">=4105",
-          "tags": true
+          "tags": "4105-"
         }
       ]
     },
