--- a/repository-released.json
+++ b/repository-released.json
@@ -10,8 +10,8 @@
       "releases": [
         {
           "base": "https://github.com/jfcherng-sublime/ST-jieba",
-          "tags": true,
-          "sublime_text": ">=3000"
+          "sublime_text": ">=3000",
+          "tags": true
         }
       ]
     }
@@ -29,7 +29,7 @@
           "tags": "4105-"
         },
         {
-          "sublime_text": "3092 - 4104",
+          "sublime_text": ">=3092",
           "tags": "3092-"
         }
       ]
@@ -56,13 +56,14 @@
           "tags": "4105-"
         },
         {
-          "sublime_text": "3084 - 4104",
+          "sublime_text": ">=3084",
           "tags": "3084-"
         }
       ]
     },
     {
       "name": "BootstrapAutocomplete",
+      "readme": "https://raw.githubusercontent.com/jfcherng-sublime/ST-BootstrapAutocomplete/st4/README.md",
       "details": "https://github.com/jfcherng-sublime/ST-BootstrapAutocomplete",
       "author": ["jfcherng"],
       "labels": ["auto-complete"],
@@ -85,7 +86,7 @@
           "tags": "4105-"
         },
         {
-          "sublime_text": "3118 - 4104",
+          "sublime_text": ">=3118",
           "tags": "3118-"
         }
       ]
