--- a/repository-released.json
+++ b/repository-released.json
@@ -166,6 +166,20 @@
           "tags": true
         }
       ]
+    },
+    {
+      "name": "WindowsContextMenu",
+      "readme": "https://raw.githubusercontent.com/jfcherng-sublime/ST-WindowsContextMenu/main/README.md",
+      "details": "https://github.com/jfcherng-sublime/ST-WindowsContextMenu",
+      "author": ["jfcherng"],
+      "donate": "https://paypal.me/jfcherng/5usd",
+      "labels": [],
+      "releases": [
+        {
+          "sublime_text": ">=4105",
+          "tags": "4105-"
+        }
+      ]
     }
   ]
 }
