--- a/repository-released.json
+++ b/repository-released.json
@@ -154,8 +154,12 @@
       "labels": ["snippets", "text manipulation"],
       "releases": [
         {
+          "sublime_text": ">=4114",
+          "tags": "4114-"
+        },
+        {
           "sublime_text": ">=3000",
-          "tags": true
+          "tags": "3000-"
         }
       ]
     },
