chore: update versions: OpenUri
Signed-off-by: Jack Cherng <jfcherng@gmail.com>

--- a/repository-released.json
+++ b/repository-released.json
@@ -139,6 +139,10 @@
       "labels": ["shortcut", "url", "uri", "browser"],
       "releases": [
         {
+          "sublime_text": ">=4152",
+          "tags": "4152-"
+        },
+        {
           "sublime_text": ">=4105",
           "tags": "4105-"
         },
