--- a/repository-released.json
+++ b/repository-released.json
@@ -144,6 +144,22 @@
       ]
     },
     {
+      "name": "RainbowIndent",
+      "details": "https://github.com/jfcherng-sublime/ST-RainbowIndent",
+      "readme": "https://raw.githubusercontent.com/jfcherng-sublime/ST-RainbowIndent/st4/README.md",
+      "author": "jfcherng",
+      "labels": ["indent"],
+      "releases": [
+        {
+          "platforms": ["*"],
+          "sublime_text": ">=4169",
+          "version": "0.0.3",
+          "url": "https://github.com/jfcherng-sublime/ST-RainbowIndent/archive/4169-0.0.3.zip",
+          "date": "2024-05-13 20:00:00"
+        }
+      ]
+    },
+    {
       "name": "ShellScriptImproved",
       "details": "https://github.com/jfcherng-sublime/ST-ShellScriptImproved",
       "author": ["jfcherng"],
