--- a/repository-released.json
+++ b/repository-released.json
@@ -162,11 +162,8 @@
 			"labels": ["indent"],
 			"releases": [
 				{
-					"platforms": ["*"],
 					"sublime_text": ">=4169",
-					"version": "0.1.1",
-					"url": "https://github.com/jfcherng-sublime/ST-RainbowIndent/archive/4169-0.1.1.zip",
-					"date": "2024-05-15 02:00:00"
+					"tags": "4169-"
 				}
 			]
 		},
