--- a/repository-released.json
+++ b/repository-released.json
@@ -57,6 +57,10 @@
 			"author": ["jfcherng"],
 			"releases": [
 				{
+					"sublime_text": ">=4201",
+					"tags": "4201-"
+				},
+				{
 					"sublime_text": ">=4114",
 					"tags": "4114-"
 				},
