--- a/repository-released.json
+++ b/repository-released.json
@@ -144,6 +144,10 @@
 			"labels": ["shortcut", "url", "uri", "browser"],
 			"releases": [
 				{
+					"sublime_text": ">=4201",
+					"tags": "4201-"
+				},
+				{
 					"sublime_text": ">=4152",
 					"tags": "4152-"
 				},
