--- a/repository-released.json
+++ b/repository-released.json
@@ -170,6 +170,10 @@
 			"labels": ["indent"],
 			"releases": [
 				{
+					"sublime_text": ">=4201",
+					"tags": "4201-"
+				},
+				{
 					"sublime_text": ">=4169",
 					"tags": "4169-"
 				}
