chore: WindowsContextMenu tags for ST >= 4201
Signed-off-by: Jack Cherng <jfcherng@gmail.com>

--- a/repository-released.json
+++ b/repository-released.json
@@ -227,6 +227,11 @@
 			"releases": [
 				{
 					"platforms": "windows",
+					"sublime_text": ">=4201",
+					"tags": "4201-"
+				},
+				{
+					"platforms": "windows",
 					"sublime_text": ">=4105",
 					"tags": "4105-"
 				}
