--- a/repository-released.json
+++ b/repository-released.json
@@ -83,6 +83,10 @@
 			"labels": ["auto-complete"],
 			"releases": [
 				{
+					"sublime_text": ">=4201",
+					"tags": "4201-"
+				},
+				{
 					"sublime_text": ">=4105",
 					"tags": "4105-"
 				}
